#EE-23606|dropdown| make down arrow icon align with font size - correct way

--- a/src/components/Dropdown/Dropdown.st.css
+++ b/src/components/Dropdown/Dropdown.st.css
@@ -96,6 +96,9 @@
 
 .dropdown:content-visible .dropdownBase::arrowIcon {
     transform: rotate(180deg);
+}
+
+.dropdown .dropdownBase::arrowIcon {
     height: 1.5em;
     width: 1.5em;
 }
